// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxButton QxButton_size_medium css-6yfr6l-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxButton QxButton_size_medium css-cxksmj-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxButton QxButton_size_medium css-q1hizq-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxButton QxButton_size_medium css-d3p0xf-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxButton QxButton_size_medium css-1wj3jvf-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1ki1h01-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-192f69w-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-9nmn03-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-zazvqf-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-16hq6r8-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxButton QxButton_size_medium QxButton_loading css-5v3eqw-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxButton-content css-51lmls-QxButton-content"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_base QxBaseButton-loader css-uhsai0-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_large css-tcgk0t-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_small css-64d5z7-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_xSmall css-16avyhg-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-e0f55p-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-ayd1c5-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-peci0b-QxBaseButton-root-QxButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxButton-content css-hh58qu-QxButton-content"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_large QxIconButton QxIconButton_size_medium css-1gloykz-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius max 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_max QxIconButton QxIconButton_size_medium css-hz3n62-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-max"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1hneyfv-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_small QxIconButton QxIconButton_size_medium css-1g9v0rb-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xLarge 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xLarge QxIconButton QxIconButton_size_medium css-73qzk-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xLarge"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params borderRadius xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_xSmall QxIconButton QxIconButton_size_medium css-1e20174-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-borderRadius-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color brand 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1hneyfv-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-brand"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color danger 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1j0osa-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-danger"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color info 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_info QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1yaolcu-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-info"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color secondary 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-erpn3f-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-secondary"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color success 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_success QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-yy1zy5-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-success"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params color warning 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_warning QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-68b24m-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-color-warning"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading false 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1hneyfv-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-false"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params loading true 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxBaseButton_loading QxIconButton QxIconButton_size_medium QxIconButton_loading css-d9jnpo-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-loading-true"
    disabled=""
    type="button"
  >
    <div
      class="QxIconButton-icon css-1nc6511-QxIconButton-icon"
    >
      Button
    </div>
    <div
      class="QxLoader QxLoader_size_base QxBaseButton-loader css-uhsai0-QxLoader-root-QxBaseButton-loader"
    >
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
      <div
        class="QxLoader-dot css-1c9k1a7-QxLoader-dot"
      />
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size large 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_large QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_large css-7ud0wi-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-large"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size medium 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1hneyfv-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-medium"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size small 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small css-102vf3h-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-small"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params size xSmall 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_xSmall QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_xSmall css-15727w5-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-size-xSmall"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type contained 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1hneyfv-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-contained"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type outlined 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1vl7zly-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-outlined"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`IconButton style params type text 1`] = `
<DocumentFragment>
  <button
    class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_medium css-1t10grd-QxBaseButton-root-QxIconButton-root"
    data-testid="testStyleParams-type-text"
    type="button"
  >
    <div
      class="QxIconButton-icon css-5rjpdh-QxIconButton-icon"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;
